--- a/HackDukeApp/View/Base.lproj/Main.storyboard
+++ b/HackDukeApp/View/Base.lproj/Main.storyboard
@@ -241,9 +241,9 @@ Very Poor: 0 to 10</string>
                         <outlet property="houseButton" destination="Kd4-Z2-tv7" id="CsZ-sI-Ug5"/>
                         <outlet property="transpButton" destination="4z3-Nz-7Wk" id="9Do-f1-SBh"/>
                         <segue destination="wq3-7J-yWp" kind="show" identifier="householdGo" id="hvh-Uc-gJf"/>
-                        <segue destination="XXM-RQ-cEg" kind="show" identifier="goToGoods" id="cCk-jA-SWa"/>
+                        <segue destination="VFQ-Fb-yqa" kind="show" identifier="goToGoods" id="cCk-jA-SWa"/>
                         <segue destination="sou-bZ-a4E" kind="show" identifier="goToFoods" id="dfg-xh-Smt"/>
-                        <segue destination="F3p-tQ-sDn" kind="show" identifier="NewTransportationViewController" id="8Am-KD-YRy"/>
+                        <segue destination="jPt-oD-xDk" kind="show" identifier="NewTransportationViewController" id="8Am-KD-YRy"/>
                         <segue destination="JsN-NO-JDx" kind="show" identifier="excellentScore" id="l0Q-Tj-T6g"/>
                     </connections>
                 </viewController>
@@ -380,7 +380,7 @@ Very Poor: 0 to 10</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HyD-bB-yII" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5004" y="-258"/>
+            <point key="canvasLocation" x="5554" y="-289"/>
         </scene>
         <!--Goods View Controller-->
         <scene sceneID="B0n-yk-cfc">
@@ -390,15 +390,8 @@ Very Poor: 0 to 10</string>
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Which of these have you bought today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QKK-bb-UV5">
-                                <rect key="frame" x="20" y="20" width="383" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MKg-gj-VyR">
-                                <rect key="frame" x="175" y="359" width="72" height="63"/>
+                                <rect key="frame" x="175" y="417" width="72" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="59"/>
@@ -410,37 +403,51 @@ Very Poor: 0 to 10</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CAK-mW-EKN">
-                                <rect key="frame" x="260" y="288" width="55" height="28"/>
+                                <rect key="frame" x="264" y="316" width="55" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input How Many" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DV9-Tn-9Gc">
-                                <rect key="frame" x="99" y="281" width="129" height="34"/>
+                                <rect key="frame" x="103" y="316" width="129" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="RS6-nN-oJo">
-                                <rect key="frame" x="120" y="272" width="41.5" height="20.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="hackDukeEarth" translatesAutoresizingMaskIntoConstraints="NO" id="J20-S0-qR2">
-                                <rect key="frame" x="99" y="488" width="216" height="173"/>
+                                <rect key="frame" x="20" y="654" width="99" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rPd-FI-EZa">
-                                <rect key="frame" x="0.0" y="83" width="414" height="162"/>
+                                <rect key="frame" x="0.0" y="129" width="414" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M1x-7o-gx0">
+                                <rect key="frame" x="127" y="533" width="240" height="236"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Which of these have you bought today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QKK-bb-UV5">
+                                <rect key="frame" x="20" y="66" width="383" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2we-5s-JrJ"/>
                         <color key="backgroundColor" red="0.522177577" green="0.69636505839999996" blue="0.52557051180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <navigationItem key="navigationItem" id="UDP-oI-R8f"/>
+                    <navigationItem key="navigationItem" id="UDP-oI-R8f">
+                        <barButtonItem key="rightBarButtonItem" image="camera" catalog="system" id="IbO-kH-8aN">
+                            <connections>
+                                <action selector="cameraTapped:" destination="XXM-RQ-cEg" id="nfw-mc-jhx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="imageViewPic" destination="M1x-7o-gx0" id="5ao-HF-J5m"/>
                         <outlet property="picker" destination="rPd-FI-EZa" id="yHh-fd-3Mf"/>
                         <outlet property="unitInput" destination="DV9-Tn-9Gc" id="Y2M-sI-1ux"/>
                         <segue destination="gKN-M0-ir8" kind="show" identifier="goodsToSelector" id="jMx-yi-RuM"/>
@@ -448,7 +455,7 @@ Very Poor: 0 to 10</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hLI-Uy-ieb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5299" y="570"/>
+            <point key="canvasLocation" x="6208.6956521739139" y="569.86607142857144"/>
         </scene>
         <!--New Transportation View Controller-->
         <scene sceneID="omd-Gs-rXg">
@@ -545,13 +552,6 @@ Very Poor: 0 to 10</string>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Which of these have you used today?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fu-Qt-BLs">
-                                <rect key="frame" x="34" y="20" width="360" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jackDukeLeaf" translatesAutoresizingMaskIntoConstraints="NO" id="vNA-dw-7Qq">
                                 <rect key="frame" x="20" y="699" width="129" height="109"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -577,14 +577,32 @@ Very Poor: 0 to 10</string>
                                     <action selector="carPressed:" destination="F3p-tQ-sDn" eventType="touchUpInside" id="wQ5-Kd-EMt"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o0b-ac-fO8">
+                                <rect key="frame" x="268" y="680" width="126" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Which of these have you used today?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fu-Qt-BLs">
+                                <rect key="frame" x="34" y="56" width="360" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uVd-Ea-Yxf"/>
                         <color key="backgroundColor" red="0.522177577" green="0.69636505839999996" blue="0.52557051180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <navigationItem key="navigationItem" id="j0R-h3-HFz"/>
+                    <navigationItem key="navigationItem" id="j0R-h3-HFz">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="camera" catalog="system" id="m0t-eF-Qmf">
+                            <connections>
+                                <action selector="cameraButtonPressed:" destination="F3p-tQ-sDn" id="NEt-Rd-k36"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="busButton" destination="BB7-Yu-Li9" id="sNt-Nv-NJS"/>
                         <outlet property="carButton" destination="jPr-Oc-q3k" id="4qY-Du-mcP"/>
+                        <outlet property="imageViewPic" destination="o0b-ac-fO8" id="qBZ-0Y-kcY"/>
                         <outlet property="planeButton" destination="IkL-xY-u1U" id="7ij-lg-dQq"/>
                         <outlet property="trainButton" destination="F1Y-lz-ofQ" id="tRC-Mj-8lf"/>
                         <outlet property="unitOutput" destination="xva-i4-mpN" id="R4S-oN-ZnR"/>
@@ -596,7 +614,7 @@ Very Poor: 0 to 10</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JGZ-uV-Rv2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3035" y="1437"/>
+            <point key="canvasLocation" x="2967" y="1590"/>
         </scene>
         <!--Foods View Controller-->
         <scene sceneID="c9p-Gy-U6o">
@@ -670,7 +688,7 @@ Very Poor: 0 to 10</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tN3-yO-VpY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5317.3913043478269" y="1224.1071428571429"/>
+            <point key="canvasLocation" x="5093" y="1517"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XYf-f8-8If">
@@ -689,11 +707,49 @@ Very Poor: 0 to 10</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z80-uH-cnt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4408.695652173913" y="1224.7767857142856"/>
+            <point key="canvasLocation" x="4261" y="1517"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="T0p-xi-sij">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jPt-oD-xDk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="36g-I4-znz"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fls-CY-IYh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="F3p-tQ-sDn" kind="relationship" relationship="rootViewController" id="Kbe-z4-B1l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8d3-G8-GZn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2262" y="1590"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="boC-KH-yKe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VFQ-Fb-yqa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="soJ-Db-wJW"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OEh-YQ-O1c">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="XXM-RQ-cEg" kind="relationship" relationship="rootViewController" id="bg4-Q8-rfg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="phD-2b-xH8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5459" y="570"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="KYe-x7-qbm"/>
+        <segue reference="jMx-yi-RuM"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Logov3.png" width="462" height="347"/>
